Add component descriptor registration foundation